# flyflow

./: .gitignore  CMakeLists.txt  conveyor.cpp  conveyor.h  copterimu.cpp  copterimu.h  ellipsoidcalibrator.cpp  ellipsoidcalibrator.h  frame.cpp  frame.h  imagestat.cpp  imagestat.h  imu.cpp  imu.h  imukalman.cpp  imukalman.h  jacobi.cpp  jacobi.h  kalman.cpp  kalman.h  kalmancopter.h  main.cpp  normdist.cpp  normdist.h  nr.sm  old.cpp  package.xml  sequenceloop.cpp  sequenceloop.h  sequencestd.cpp  sequencestd.h  timefusion.cpp  timefusion.h  timer.h  tparse.js  utils.h  vectpl.cpp  vectpl.h  visualizer.cpp  visualizer.h
qlman/: MainForm.ui.qml  kalmandraft.cpp  kalmandraft.h  main.cpp  main.qml  qlman.pro
test/: CMakeLists.txt  test.cpp  test.pro
tracker/: STM32F051R8_FLASH.ld  board.h  main.cpp  queue.h  stm32f0.ld  stm32f4.ld  tracker.qbs  uart.cpp  uart.h
