<?xml version="1.0"?>
<package format="2">
  <name>flyflow</name>
  <version>0.1.1</version>
  <description>Simple 2D optical flow</description>

  <maintainer email="smirnoviv@rambler.ru">Igor Smirnov</maintainer>
  <license>BSD</license>

  <author email="smirnoviv@rambler.ru">Igor Smirnov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
</package>
